navbar is now done

--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
             <p>Services</p>
             <p>Skills</p>
             <p>Events</p>
-            <p>Projects</p>
+            <!--<p>Projects</p>-->
             <p>Contact</p>
         </div>
 
-        <div class="humberger"></div>
+        <div class="humberger" onclick="toggleNavBar()"></div>
     </nav>
 
 
@@ -316,6 +316,7 @@
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
+    <script src="js/script.js"></script>
 
 </body>
 </html>
